@@ -53,10 +53,10 @@ jobs:
         path: libqmail
 
     - name: install_qmail
-      run: cd libqmail;env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" ./default.configure; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" make; sudo make install-strip
+      run: cd libqmail;env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" ./default.configure; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" make; sudo make install-strip
     - name: install_libdkim2
-      run: cd main/libdkim2-x; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" ./default.configure; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" make; sudo make install-strip
+      run: cd main/libdkim2-x; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" ./default.configure; env CPPFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" make; sudo make install-strip
     - name: install_libsrs2
       run: cd main/libsrs2-x; ./default.configure; make; sudo make install-strip
     - name: build_indimail-mta
-      run: cd main/indimail-mta-x; env CFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" ./default.configure; env CFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.3.2/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.3.2/lib" ./qmake
+      run: cd main/indimail-mta-x; env CFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" ./default.configure; env CFLAGS="-I/opt/homebrew/Cellar/openssl@3/3.4.0/include" LDFLAGS="-L/opt/homebrew/Cellar/openssl@3/3.4.0/lib" ./qmake
